# DrivingSwarm

./: .gitignore  .gitman.yml  .gitmodules  LICENSE  README.md  gitman.yml  host_tmux.sh  jonathansKrassesLaunchFile.launch  kill.sh  robot_tmux.sh  tmux.sh
doc/BehaviourAPI/: BehaviourAPI_doku.gv
doc/gitman/: gitman_doc.gv
src/: openslam_gmapping  pathplanning  slam_gmapping  turtlebot3_simulations
src/core/: CMakeLists.txt  package.xml
src/core/action/: Behaviour.action
src/core/cfg/: behaviour_flow.yaml  behaviour_list.yaml  bot_list.yaml  test.yaml  upstart.sh
src/core/config/: behaviour_flow.yaml
src/core/launch/: aclient.launch  additional_master.sh  additional_master_gazebo.launch  aserver.launch  atest.launch  gazebo_bot.launch  gazebo_single.launch  gazebo_world.launch  teleop_mm.launch  turtlebook_bootup.launch  turtlebook_map.launch  turtlebot_amcl.launch  turtlebot_bootup.launch  turtlebot_bootup_amcl.launch  turtlebot_bootup_move.launch  turtlebot_bootup_slam.launch  turtlebot_map.launch  turtlebot_move.launch  turtlebot_slam.launch
src/core/maps/: arena_empty.yaml  world.pgm  world.yaml
src/core/msg/: behaviour.action
src/core/src/: aclient.py  aserver.py  atest.py  (+6 more)
src/driving_swarm_amcl2loctf/: CMakeLists.txt  package.xml
src/driving_swarm_combined_output/: CMakeLists.txt  package.xml
src/driving_swarm_fake_localisation/: CMakeLists.txt  package.xml
src/driving_swarm_loc/: CMakeLists.txt  package.xml
src/driving_swarm_loc/launch/: amcl2loctf.launch  combined_output.launch  convert_amcl_tf_tree.launch  transform_correlator_AMCL2Cam.launch
src/driving_swarm_loc/nodes/: amcl2loctf.py  assign_turtle_ids  combined_output  convert_amcl_tf_tree  find_map_to_world_transform  transform_correlator  transform_correlator_AMCL2Cam
src/driving_swarm_loc_sim/: CMakeLists.txt  package.xml
src/driving_swarm_loc_sim/launch/: amcl.launch  fake_localisation.launch  fake_turtlebot_assign.launch  init_robots.launch  simulate.launch
src/driving_swarm_loc_sim/maps/: arena_one.pgm  arena_one.yaml
src/driving_swarm_loc_sim/models/arena_one/: model.config  model.sdf
src/driving_swarm_loc_sim/nodes/: fake_localisation
src/driving_swarm_loc_sim/urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
src/driving_swarm_loc_sim/worlds/: arena_one.world
src/driving_swarm_msgs/: CMakeLists.txt  package.xml
src/fakeLocalisation/: CMakeLists.txt  package.xml
src/fake_localisation/: CMakeLists.txt  package.xml
src/localisation_msgs/: CMakeLists.txt  package.xml
src/transform_correlation/: CMakeLists.txt  package.xml
src/turtle_follow/: CMakeLists.txt  package.xml
(+22 files in other folders)
