<?xml version="1.0"?>
<package format="2">
  <name>driving_swarm_loc</name>
  <version>0.0.0</version>
  <description>The driving_swarm_loc package</description>

  <license>TODO</license>
  <maintainer email="nico@todo.todo">nico</maintainer>


  <buildtool_depend>catkin</buildtool_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
