<?xml version="1.0"?>
<package format="2">
  <name>driving_swarm_loc_sim</name>
  <version>0.0.0</version>
  <description>The driving_swarm_loc_sim package</description>
  <maintainer email="swarmlab@todo.todo">swarmlab</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>amcl</depend>
  <depend>driving_swarm_fake_localisation</depend>
  <depend>driving_swarm_loc</depend>
  <depend>driving_swarm_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>map_server</depend>
  <depend>turtlebot3_bringup</depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python-numpy</exec_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>

</package>
